--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,8 +2,8 @@ name: Test Workflow
 on:
   push:
     branches:
-      - master
-      - dev
+      - main
+      - develop
 
   workflow_dispatch:
   pull_request:
